possible resources added to TileBaseTypes enum