@@ -1,21 +1,27 @@
 package enums.tiles;
 
 import enums.Colors;
+import enums.resources.BonusResourceTypes;
+import enums.resources.LuxuryResourceTypes;
+import enums.resources.ResourceTypes;
+import enums.resources.StrategicResourceTypes;
+import models.resources.StrategicResource;
 
+import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Random;
 
 public enum TileBaseTypes implements TileTypes {
 
-    DESERT("desert", 0, 0, 0, -33, 1, Colors.YELLOW,new HashSet<>(List.of(TileFeatureTypes.OASIS , TileFeatureTypes.VALLEY))), //kavir
-    MEADOW("meadow", 2, 0, 0, -33, 1, Colors.GREEN,new HashSet<>(List.of(TileFeatureTypes.JUNGLE , TileFeatureTypes.SWAMP))),// chamanzar
-    HEEL("heel", 0, 2, 0, 25, 2, Colors.BLACK,new HashSet<>(List.of(TileFeatureTypes.JUNGLE, TileFeatureTypes.FOREST))),
-    MOUNTAIN("mountain", 0, 0, 0, 25, 9999, Colors.PURPLE,new HashSet<>(List.of())),
-    OCEAN("ocean", 0, 0, 0, 25, 9999, Colors.CYAN,new HashSet<>(List.of())),
-    PLAIN("plain", 1, 1, 0, -33, 1, Colors.RED,new HashSet<>(List.of(TileFeatureTypes.JUNGLE , TileFeatureTypes.FOREST))), // dasht
-    SNOW("snow", 0, 0, 0, -33, 1, Colors.WHITE,new HashSet<>(List.of())),
-    TUNDRA("tundra", 1, 0, 0, -33, 1, Colors.PINK, new HashSet<>(List.of(TileFeatureTypes.JUNGLE)));
+    DESERT("desert", 0, 0, 0, -33, 1, Colors.YELLOW,new HashSet<>(List.of(TileFeatureTypes.OASIS , TileFeatureTypes.VALLEY)), new HashSet<>(Arrays.asList(StrategicResourceTypes.IRON,LuxuryResourceTypes.GOLD,LuxuryResourceTypes.SILVER,LuxuryResourceTypes.JEWEL,LuxuryResourceTypes.MARBLE, LuxuryResourceTypes.COTTON,LuxuryResourceTypes.INCENSE,BonusResourceTypes.SHEEP))), //kavir
+    MEADOW("meadow", 2, 0, 0, -33, 1, Colors.GREEN,new HashSet<>(List.of(TileFeatureTypes.JUNGLE , TileFeatureTypes.SWAMP)),new HashSet<>(Arrays.asList(StrategicResourceTypes.IRON,StrategicResourceTypes.HORSE,StrategicResourceTypes.COAL, BonusResourceTypes.COW, LuxuryResourceTypes.GOLD, LuxuryResourceTypes.JEWEL,LuxuryResourceTypes.COTTON,LuxuryResourceTypes.MARBLE,BonusResourceTypes.SHEEP))),// chamanzar
+    HEEL("heel", 0, 2, 0, 25, 2, Colors.BLACK,new HashSet<>(List.of(TileFeatureTypes.JUNGLE, TileFeatureTypes.FOREST)), new HashSet<>(Arrays.asList(StrategicResourceTypes.IRON, StrategicResourceTypes.COAL , BonusResourceTypes.GAZELLE , LuxuryResourceTypes.GOLD,LuxuryResourceTypes.SILVER,LuxuryResourceTypes.JEWEL, LuxuryResourceTypes.MARBLE,BonusResourceTypes.SHEEP))),
+    MOUNTAIN("mountain", 0, 0, 0, 25, 9999, Colors.PURPLE,new HashSet<>(List.of()), new HashSet<>()),
+    OCEAN("ocean", 0, 0, 0, 25, 9999, Colors.CYAN,new HashSet<>(List.of()), new HashSet<>()),
+    PLAIN("plain", 1, 1, 0, -33, 1, Colors.RED,new HashSet<>(List.of(TileFeatureTypes.JUNGLE , TileFeatureTypes.FOREST)), new HashSet<>(Arrays.asList(StrategicResourceTypes.IRON,StrategicResourceTypes.HORSE,StrategicResourceTypes.COAL,BonusResourceTypes.WHEAT,LuxuryResourceTypes.GOLD,LuxuryResourceTypes.JEWEL,LuxuryResourceTypes.MARBLE,LuxuryResourceTypes.IVORY,LuxuryResourceTypes.COTTON,LuxuryResourceTypes.INCENSE,BonusResourceTypes.SHEEP))), // dasht
+    SNOW("snow", 0, 0, 0, -33, 1, Colors.WHITE,new HashSet<>(List.of()),new HashSet<>(Arrays.asList(StrategicResourceTypes.IRON))),
+    TUNDRA("tundra", 1, 0, 0, -33, 1, Colors.PINK, new HashSet<>(List.of(TileFeatureTypes.JUNGLE)), new HashSet<>(Arrays.asList(StrategicResourceTypes.IRON,StrategicResourceTypes.HORSE, BonusResourceTypes.GAZELLE , LuxuryResourceTypes.SILVER,LuxuryResourceTypes.JEWEL, LuxuryResourceTypes.MARBLE, LuxuryResourceTypes.COTTON)));
 
     private final String name;
     private final double food;
@@ -26,8 +32,10 @@ public enum TileBaseTypes implements TileTypes {
     private final Colors color;
 
     private final HashSet<TileFeatureTypes> possibleFeatures;
+
+    private final HashSet<ResourceTypes> possibleResources;
     TileBaseTypes(String name, double food, double production, double gold, int combatImpact, int movingPoint,
-                  Colors color , HashSet<TileFeatureTypes> possibleFeatures) {
+                  Colors color , HashSet<TileFeatureTypes> possibleFeatures , HashSet<ResourceTypes> possibleResources) {
         this.name = name;
         this.food = food;
         this.production = production;
@@ -37,6 +45,7 @@ public enum TileBaseTypes implements TileTypes {
         this.color = color;
         possibleFeatures.add(TileFeatureTypes.NULL);
         this.possibleFeatures = possibleFeatures;
+        this.possibleResources = possibleResources;
     }
 
     public static TileBaseTypes generateRandom() {
@@ -74,5 +83,8 @@ public enum TileBaseTypes implements TileTypes {
 
     public HashSet<TileFeatureTypes> getPossibleFeatures() {
         return possibleFeatures;
+    }
+    public HashSet<ResourceTypes> getPossibleResources(){
+        return possibleResources;
     }
 }
